# squirrel

./: .gitmodules  Ledger.g4  README.md  cucumber.js  index.html  package-lock.json  package.json  tsconfig.json
.githooks/: pre-commit  pre-push
.github/workflows/: build.yml
features/ui/: README.md  add_account.feature  appium_macos.feature  appium_macos.steps.js  manual_transaction.feature  parse_display.feature  parse_display.steps.js
sample-data/: account_opening.transactions  bad-data.transactions  example.transactions  uncategorised.transactions
scripts/: deploy_local.sh  install-git-hooks.sh  run_e2e_tests.sh  run_feature_tests.sh  run_tauri_webdriver_e2e.mjs  run_unit_tests.sh  setup_appium_mac2.sh  sync-scripts.sh
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/features/fixtures/: example.transactions  invalid.transactions  valid.transactions
src-tauri/features/parser/: ledger_parse.feature
src-tauri/icons/: icon.icns
src-tauri/src/: generated_ledger.rs  generated_store.rs  ledger_parser.rs  lib.rs  main.rs
src-tauri/tests/: bdd.rs
