[package]
name = "squirrel-covid"
version = "0.1.0"
edition = "2021"
default-run = "squirrel-covid"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
regex = "1"
thiserror = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
cucumber = "=0.21.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"

[[bin]]
name = "ledger-parse"
path = "src/bin/ledger_parse.rs"

[[test]]
name = "bdd"
harness = false
